@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+    * Fixes
+        - Fixed rels ending with me breaking subqueried limit realiasing
+
 0.08123 2010-06-12 14:46 (UTC)
     * Fixes
         - Make sure Oracle identifier shortener applies to auto-generated
